VideoService: - Basic http authentication added - Folder icon added